WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158735
WebRTC: RTCPeerConnection::addTrack() should throw InvalidAccessError instead of InvalidModificationError.
https://bugs.webkit.org/show_bug.cgi?id=158735
Summary
WebRTC: RTCPeerConnection::addTrack() should throw InvalidAccessError instead...
Nael Ouedraogo
Reported
2016-06-14 07:02:23 PDT
WebRTC: RTCPeerConnection::addTrack() should throw InvalidAccessError exception when track already exists in connection's set of senders.
Attachments
Patch
(3.51 KB, patch)
2016-06-14 07:18 PDT
,
Nael Ouedraogo
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.54 KB, patch)
2016-06-14 09:34 PDT
,
Nael Ouedraogo
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Nael Ouedraogo
Comment 1
2016-06-14 07:18:59 PDT
Created
attachment 281257
[details]
Patch
Eric Carlson
Comment 2
2016-06-14 07:46:33 PDT
Comment on
attachment 281257
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281257&action=review
> Source/WebCore/ChangeLog:10 > + Throw InvalidAccessError instead of InvalidModificationError when track already exists in connection's > + set of senders as per specification (
https://w3c.github.io/webrtc-pc/#dom-rtcpeerconnection-addtrack
). > +
Please note that the results for an existing test were updated for this fix, e.g. something like: Updated existing test results: fast/mediastream/RTCPeerConnection-add-removeTrack-expected.txt
Nael Ouedraogo
Comment 3
2016-06-14 09:34:21 PDT
Created
attachment 281262
[details]
Patch for landing
Nael Ouedraogo
Comment 4
2016-06-14 09:39:12 PDT
I landed a new patch with proposed modification in ChangeLog. Thanks for the review.
WebKit Commit Bot
Comment 5
2016-06-14 09:44:49 PDT
Comment on
attachment 281262
[details]
Patch for landing Clearing flags on attachment: 281262 Committed
r202049
: <
http://trac.webkit.org/changeset/202049
>
WebKit Commit Bot
Comment 6
2016-06-14 09:44:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug