WebRTC: RTCPeerConnection::addTrack() should throw InvalidAccessError instead of InvalidModificationError. https://bugs.webkit.org/show_bug.cgi?id=158735

Reviewed by Eric Carlson.

Source/WebCore:

Throw InvalidAccessError instead of InvalidModificationError when track already exists in connection's
set of senders as per specification (https://w3c.github.io/webrtc-pc/#dom-rtcpeerconnection-addtrack).

Updated existing test results: fast/mediastream/RTCPeerConnection-add-removeTrack-expected.txt

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::addTrack):

LayoutTests:

Check that an InvalidAccessError exception is thrown when the track already exists in set of senders.

* fast/mediastream/RTCPeerConnection-add-removeTrack-expected.txt:


Canonical link: https://commits.webkit.org/176828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202049 268f45cc-cd09-0410-ab3c-d52691b4dbfc